# Haskell_Schiffeversenken

./: LICENSE  README.md  Schiffe.cabal
src/: Client.hs  Datatypes.hs  Logic.hs  Main.hs  Server.hs  Tests.hs  UserInterface.hs  War.hs  vonOB.hs
tests/: TestSuite.hs  Tests.hs
