name:                Schiffe
version:             0.1.0.0
synopsis:            Hit the Ships
-- description:         
license:             BSD3
license-file:        LICENSE
author:              MRBW
--maintainer:          
-- copyright:           
-- category:            
build-type:          Simple
-- extra-source-files:  
cabal-version:       >=1.10

executable Haskell_Schiffeversenken
  hs-source-dirs: src
  main-is:        Main.hs
  -- other-modules:       
  -- other-extensions:    
  build-depends:       base , containers,time, random, old-time, regex-posix, network
  -- hs-source-dirs:      
  default-language:    Haskell2010

--test-suite 
  --type:              exitcode-stdio-1.0
  --hs-source-dirs:    src tests
  --Main-is:           TestSuite.hs
  --Build-depends:     base >= 4.6 && < 4.7,
   --                  QuickCheck >= 2,
       --              HUnit,
     --                test-framework,
         --            test-framework-quickcheck2,
           --          test-framework-hunit
  default-language:  Haskell2010
  ghc-options: -O2 -Wall -fhpc -fwarn-tabs -funbox-strict-fields -threaded
               -fno-warn-unused-do-bind
